tests/snapshots/cargo_wash__test__cargo_wash-clean.snap
---
source: src/test.rs
expression: help_text
---
Execute `cargo clean` on all projects

Usage: clean [OPTIONS]

Options:
  -p, --path <PATH>
          Path to a directory
          
          [default: .]

  -d, --dry-run
          Run the program without making any changes

  -h, --help
          Print help

  -V, --version
          Print version
