tests/snapshots/cargo_wash__test__cargo_wash-execute.snap
---
source: src/test.rs
expression: help_text
---
Execute different commands on all rust projects in the directory

Usage: execute [OPTIONS]

Options:
  -p, --path <PATH>
          Path to the directory from which to start the search for Rust projects

  -e, --exclude <EXCLUDE>
          Exclude the provided folder from the size calculation and cleaning You can specify multiple folders separated by commas

  -c, --command <COMMAND>
          The command to execute on the Rust projects

          Possible values:
          - build:  Execute `cargo build`
          - check:  Execute `cargo check`
          - doc:    Execute `cargo doc`
          - clean:  Execute `cargo clean`
          - run:    Execute `cargo run`
          - test:   Execute `cargo test`
          - bench:  Execute `cargo bench`
          - update: Execute `cargo update`
          - none:   No command, used for default or no operation

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
