tests/snapshots/cargo_wash__test__cargo_wash-rebuild.snap
---
source: src/test.rs
expression: help_text
---
Rebuild all Rust projects in the directory

Usage: rebuild [OPTIONS]

Options:
  -p, --path <PATH>
          Path to the directory from which to start the search for Rust projects default is `.`

  -e, --exclude <EXCLUDE>
          Exclude the provided folder from the size calculation and cleaning default is `None` - you can specify multiple folders separated by `,`

  -h, --help
          Print help

  -V, --version
          Print version
