tests/snapshots/cargo_wash__test__cargo_wash-size.snap
---
source: src/test.rs
expression: help_text
---
Calculate the total size of all target folders

Usage: size [OPTIONS]

Options:
  -p, --path <PATH>
          Path to a directory

  -d, --dry-run
          Run the program without making any changes

  -e, --exclude <EXCLUDE>
          Exclude specific projects (by name)

  -h, --help
          Print help

  -V, --version
          Print version
