tests/snapshots/cargo_wash__test__cargo_wash-stats.snap
---
source: src/test.rs
expression: help_text
---
Print statistics about all Rust projects in the directory

Usage: stats [OPTIONS]

Options:
  -d, --dry-run
          Run the program without making any changes

  -p, --path <PATH>
          Path to a directory

  -b, --build-folder <BUILD_FOLDER>
          Custom additional build folder which should be used for size calculation and cleaning default is `target` (e.g. `dist`, `build`, `target`, etc.)

  -e, --exclude <EXCLUDE>
          Exclude the provided folder from the size calculation and cleaning default is `None` - you can specfy multiple folders separated by `,`

  -h, --help
          Print help

  -V, --version
          Print version
