tests/snapshots/cargo_wash__test__cargo_wash.snap
---
source: src/test.rs
expression: help_text
---
A tool to clean up your Cargo caches

Usage: cargo_wash <COMMAND>

Commands:
  stats  Print statistics about all projects we support
  size   Calculate the total size of all build/target folders
  clean  Execute `cargo clean` or similar commands specific to the language on all projects
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help

  -V, --version
          Print version
